--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -1,3 +1,50 @@
+@import '../bower_components/md-colors/src/md-colors';
+
+$primaryPalette: 'deep-purple';
+$accentPalette: 'amber';
+$warnPalette: 'red';
+$backgroundPalette: 'grey';
+
+$primaryDefaultShade: '500';
+$primaryShade1: '300';
+$primaryShade2: '800';
+$primaryShade3: 'a100';
+
+$accentDefaultShade: 'a200';
+$accentShade1: 'a100';
+$accentShade2: 'a400';
+$accentShade3: 'a700';
+
+$warnDefaultShade: '500';
+$warnShade1: '300';
+$warnShade2: '800';
+$warnShade3: 'a100';
+
+$backgroundDefaultShade: '400';
+$backgroundShade1: '200';
+$backgroundShade2: '600';
+$backgroundShade3: '300';
+
+$primary-default: md-color($primaryPalette, $primaryDefaultShade);
+$primary-hue-1: md-color($primaryPalette, $primaryShade1);
+$primary-hue-2: md-color($primaryPalette, $primaryShade2);
+$primary-hue-3: md-color($primaryPalette, $primaryShade3);
+
+$accent-default: md-color($accentPalette, $accentDefaultShade);
+$accent-hue-1: md-color($accentPalette, $accentShade1);
+$accent-hue-2: md-color($accentPalette, $accentShade2);
+$accent-hue-3: md-color($accentPalette, $accentShade3);
+
+$warn-default: md-color($warnPalette, $warnDefaultShade);
+$warn-hue-1: md-color($warnPalette, $warnShade1);
+$warn-hue-2: md-color($warnPalette, $warnShade2);
+$warn-hue-3: md-color($warnPalette, $warnShade3);
+
+$background-default: md-color($backgroundPalette, $backgroundDefaultShade);
+$background-hue-1: md-color($backgroundPalette, $backgroundShade1);
+$background-hue-2: md-color($backgroundPalette, $backgroundShade2);
+$background-hue-3: md-color($backgroundPalette, $backgroundShade3);
+
 $border-radius: 4px;
 
 .storyContent {
@@ -7,22 +54,26 @@ $border-radius: 4px;
     bottom: 0;
     right: 0;
     padding: 4px;
+    background: #fff;
+    border-bottom-left-radius: $border-radius;
+    border-bottom-right-radius: $border-radius;
 }
 
 .wordWrap {
     word-break: break-word;
 }
 
-md-grid-tile {
-    border: 1px solid;
-    border-radius: $border-radius;
-    box-shadow: 1px 1px 3px 0 transparentize(#000, 0.5);
+.storiesGrid {
+    md-grid-tile {
+        border: 1px solid $primary-hue-2;
+        border-radius: $border-radius;
+        box-shadow: 1px 1px 3px 0 transparentize(#000, 0.4);
 
-    md-grid-tile-header {
-        border-top-right-radius: $border-radius;
-        border-top-left-radius: $border-radius;
-        padding: 4px;
-    }   
+        md-grid-tile-header {
+            padding: 4px;
+            background: $primary-default;
+        }   
+    }
 }
 
 a[ng-click] {
