Include the material icons font and add icons.

--- a/app/styles/_grid.scss
+++ b/app/styles/_grid.scss
@@ -7,7 +7,11 @@
         md-grid-tile-header {
             padding: 4px;
             background: $primary-default;
-        }   
+        }
+
+        md-grid-tile-footer {
+            background: transparent;
+        }
     }
 }
 
