Add navigation to the story detail page.

--- a/app/styles/_grid.scss
+++ b/app/styles/_grid.scss
@@ -7,6 +7,7 @@
         md-grid-tile-header {
             padding: 4px;
             background: $primary-default;
+            cursor: pointer;
         }
 
         md-grid-tile-footer {
