--- a/app/styles/_utility.scss
+++ b/app/styles/_utility.scss
@@ -2,6 +2,10 @@
     word-break: break-word;
 }
 
+.md-select-menu-container md-content {
+    background: #fff;
+}
+
 a[ng-click] {
     cursor: pointer;
 }
